# otorongo

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.agent/rules/: apidocumentation.md
data/: fixtures.csv  fixtures.json  fixtures_pointbypoint.csv  fixtures_scores.csv  h2h_1st_pl.csv  h2h_2nd_pl.csv  h2h_h2h.csv  player_ids_fixtures.csv  players_1905.csv  players_1905.json  players_1905_stats.csv  players_1905_tournaments.csv  players_55858.csv  players_55858_stats.csv  standings.csv  standings_ATP.csv  standings_WTA.csv  temp_p1_1099.csv  temp_p1_2849.csv  temp_p1_surf_1099.csv  temp_p1_surf_2849.csv  temp_p2_1895.csv  temp_p2_2083.csv  temp_p2_surf_1895.csv  temp_p2_surf_2083.csv  tournaments.csv  tournaments.json
data/fixtures/: fixtures.csv  fixtures_player_1099.csv  fixtures_player_1099_pointbypoint.csv  fixtures_player_1099_scores.csv  fixtures_player_1895.csv  fixtures_player_1895_pointbypoint.csv  fixtures_player_1895_scores.csv  fixtures_player_2083.csv  fixtures_player_2083_pointbypoint.csv  fixtures_player_2083_scores.csv  fixtures_player_2849.csv  fixtures_player_2849_pointbypoint.csv  fixtures_player_2849_scores.csv  fixtures_pointbypoint.csv  fixtures_scores.csv
data/h2h/: h2h_1099_vs_2083_1st_pl.csv  h2h_1099_vs_2083_2nd_pl.csv  h2h_1099_vs_2083_h2h.csv  h2h_2849_vs_1895_1st_pl.csv  h2h_2849_vs_1895_2nd_pl.csv  h2h_2849_vs_1895_h2h.csv
scripts/: extract_player_id.py  my_columns.py  process_files.py  tenis_api.py
update_20260101/: README.md  sample_tournaments.csv
update_20260101/scripts/: logger_config.py  (+2 more)
